Fix option pop-up styles on mobile

--- a/src/styles/select.css
+++ b/src/styles/select.css
@@ -45,6 +45,7 @@
   position: absolute;
   z-index: 2;
   border: 1px solid #4f2119;
+  text-align: left;
   top: 44px;
   width: 100%;
   height: 0;
